utils/YulAntlr/YulParser.py
# Generated from Yul.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class YulParser ( Parser ):

    grammarFileName = "Yul.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'('", "')'", "'->'", "':='", 
                     "':'", "','", "'object'", "'code'", "'data'", "'hex'", 
                     "'if'", "'switch'", "'case'", "'default'", "'for'", 
                     "'break'", "'continue'", "'leave'", "'function'", "'let'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "KW_OBJECT", "KW_CODE", "KW_DATA", "KW_HEX", 
                      "KW_IF", "KW_SWITCH", "KW_CASE", "KW_DEFAULT", "KW_FOR", 
                      "KW_BREAK", "KW_CONTINUE", "KW_LEAVE", "KW_FUNCTION", 
                      "KW_LET", "STRING_LITERAL", "StringLiteralFragment", 
                      "ID_LITERAL", "TRUE_LITERAL", "FALSE_LITERAL", "DEC_NUMBER", 
                      "HEX_NUMBER", "COMMENT", "LINE_COMMENT", "WS" ]

    RULE_start = 0
    RULE_yul_object = 1
    RULE_yul_data = 2
    RULE_yul_code = 3
    RULE_yul_if = 4
    RULE_yul_switch = 5
    RULE_yul_case = 6
    RULE_yul_default = 7
    RULE_yul_for_loop = 8
    RULE_yul_break = 9
    RULE_yul_continue = 10
    RULE_yul_leave = 11
    RULE_yul_function_definition = 12
    RULE_yul_variable_declaration = 13
    RULE_yul_function_arg_list = 14
    RULE_yul_function_ret_list = 15
    RULE_yul_typed_identifier_list = 16
    RULE_yul_identifier_list = 17
    RULE_yul_block = 18
    RULE_yul_statement = 19
    RULE_yul_assignment = 20
    RULE_yul_expression = 21
    RULE_yul_function_call = 22
    RULE_yul_literal = 23
    RULE_yul_number_literal = 24
    RULE_yul_true_literal = 25
    RULE_yul_false_literal = 26
    RULE_yul_hex_number = 27
    RULE_yul_dec_number = 28
    RULE_yul_type_name = 29
    RULE_yul_identifier = 30
    RULE_yul_string_literal = 31

    ruleNames =  [ "start", "yul_object", "yul_data", "yul_code", "yul_if", 
                   "yul_switch", "yul_case", "yul_default", "yul_for_loop", 
                   "yul_break", "yul_continue", "yul_leave", "yul_function_definition", 
                   "yul_variable_declaration", "yul_function_arg_list", 
                   "yul_function_ret_list", "yul_typed_identifier_list", 
                   "yul_identifier_list", "yul_block", "yul_statement", 
                   "yul_assignment", "yul_expression", "yul_function_call", 
                   "yul_literal", "yul_number_literal", "yul_true_literal", 
                   "yul_false_literal", "yul_hex_number", "yul_dec_number", 
                   "yul_type_name", "yul_identifier", "yul_string_literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    KW_OBJECT=9
    KW_CODE=10
    KW_DATA=11
    KW_HEX=12
    KW_IF=13
    KW_SWITCH=14
    KW_CASE=15
    KW_DEFAULT=16
    KW_FOR=17
    KW_BREAK=18
    KW_CONTINUE=19
    KW_LEAVE=20
    KW_FUNCTION=21
    KW_LET=22
    STRING_LITERAL=23
    StringLiteralFragment=24
    ID_LITERAL=25
    TRUE_LITERAL=26
    FALSE_LITERAL=27
    DEC_NUMBER=28
    HEX_NUMBER=29
    COMMENT=30
    LINE_COMMENT=31
    WS=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def yul_object(self):
            return self.getTypedRuleContext(YulParser.Yul_objectContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = YulParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.yul_object()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yul_objectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_OBJECT(self):
            return self.getToken(YulParser.KW_OBJECT, 0)

        def yul_string_literal(self):
            return self.getTypedRuleContext(YulParser.Yul_string_literalContext,0)


        def yul_code(self):
            return self.getTypedRuleContext(YulParser.Yul_codeContext,0)


        def yul_object(self):
            return self.getTypedRuleContext(YulParser.Yul_objectContext,0)


        def yul_data(self):
            return self.getTypedRuleContext(YulParser.Yul_dataContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_yul_object

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYul_object" ):
                listener.enterYul_object(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYul_object" ):
                listener.exitYul_object(self)




    def yul_object(self):

        localctx = YulParser.Yul_objectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_yul_object)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(YulParser.KW_OBJECT)
            self.state = 67
            self.yul_string_literal()
            self.state = 68
            self.match(YulParser.T__0)

            self.state = 69
            self.yul_code()
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YulParser.KW_OBJECT:
                self.state = 70
                self.yul_object()


            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YulParser.KW_DATA:
                self.state = 73
                self.yul_data()


            self.state = 76
            self.match(YulParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yul_dataContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_DATA(self):
            return self.getToken(YulParser.KW_DATA, 0)

        def yul_string_literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YulParser.Yul_string_literalContext)
            else:
                return self.getTypedRuleContext(YulParser.Yul_string_literalContext,i)


        def KW_HEX(self):
            return self.getToken(YulParser.KW_HEX, 0)

        def getRuleIndex(self):
            return YulParser.RULE_yul_data

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYul_data" ):
                listener.enterYul_data(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYul_data" ):
                listener.exitYul_data(self)




    def yul_data(self):

        localctx = YulParser.Yul_dataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_yul_data)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(YulParser.KW_DATA)
            self.state = 79
            self.yul_string_literal()
            self.state = 80
            self.match(YulParser.KW_HEX)
            self.state = 81
            self.yul_string_literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yul_codeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_CODE(self):
            return self.getToken(YulParser.KW_CODE, 0)

        def yul_block(self):
            return self.getTypedRuleContext(YulParser.Yul_blockContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_yul_code

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYul_code" ):
                listener.enterYul_code(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYul_code" ):
                listener.exitYul_code(self)




    def yul_code(self):

        localctx = YulParser.Yul_codeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_yul_code)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(YulParser.KW_CODE)
            self.state = 84
            self.yul_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yul_ifContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_IF(self):
            return self.getToken(YulParser.KW_IF, 0)

        def yul_expression(self):
            return self.getTypedRuleContext(YulParser.Yul_expressionContext,0)


        def yul_block(self):
            return self.getTypedRuleContext(YulParser.Yul_blockContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_yul_if

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYul_if" ):
                listener.enterYul_if(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYul_if" ):
                listener.exitYul_if(self)




    def yul_if(self):

        localctx = YulParser.Yul_ifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_yul_if)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(YulParser.KW_IF)
            self.state = 87
            self.yul_expression()
            self.state = 88
            self.yul_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yul_switchContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_SWITCH(self):
            return self.getToken(YulParser.KW_SWITCH, 0)

        def yul_expression(self):
            return self.getTypedRuleContext(YulParser.Yul_expressionContext,0)


        def yul_default(self):
            return self.getTypedRuleContext(YulParser.Yul_defaultContext,0)


        def yul_case(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YulParser.Yul_caseContext)
            else:
                return self.getTypedRuleContext(YulParser.Yul_caseContext,i)


        def getRuleIndex(self):
            return YulParser.RULE_yul_switch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYul_switch" ):
                listener.enterYul_switch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYul_switch" ):
                listener.exitYul_switch(self)




    def yul_switch(self):

        localctx = YulParser.Yul_switchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_yul_switch)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(YulParser.KW_SWITCH)
            self.state = 91
            self.yul_expression()
            self.state = 101
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [YulParser.KW_CASE]:
                self.state = 93 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 92
                    self.yul_case()
                    self.state = 95 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==YulParser.KW_CASE):
                        break

                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YulParser.KW_DEFAULT:
                    self.state = 97
                    self.yul_default()


                pass
            elif token in [YulParser.KW_DEFAULT]:
                self.state = 100
                self.yul_default()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yul_caseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_CASE(self):
            return self.getToken(YulParser.KW_CASE, 0)

        def yul_literal(self):
            return self.getTypedRuleContext(YulParser.Yul_literalContext,0)


        def yul_block(self):
            return self.getTypedRuleContext(YulParser.Yul_blockContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_yul_case

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYul_case" ):
                listener.enterYul_case(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYul_case" ):
                listener.exitYul_case(self)




    def yul_case(self):

        localctx = YulParser.Yul_caseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_yul_case)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(YulParser.KW_CASE)
            self.state = 104
            self.yul_literal()
            self.state = 105
            self.yul_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yul_defaultContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_DEFAULT(self):
            return self.getToken(YulParser.KW_DEFAULT, 0)

        def yul_block(self):
            return self.getTypedRuleContext(YulParser.Yul_blockContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_yul_default

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYul_default" ):
                listener.enterYul_default(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYul_default" ):
                listener.exitYul_default(self)




    def yul_default(self):

        localctx = YulParser.Yul_defaultContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_yul_default)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(YulParser.KW_DEFAULT)
            self.state = 108
            self.yul_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yul_for_loopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_FOR(self):
            return self.getToken(YulParser.KW_FOR, 0)

        def yul_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YulParser.Yul_blockContext)
            else:
                return self.getTypedRuleContext(YulParser.Yul_blockContext,i)


        def yul_expression(self):
            return self.getTypedRuleContext(YulParser.Yul_expressionContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_yul_for_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYul_for_loop" ):
                listener.enterYul_for_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYul_for_loop" ):
                listener.exitYul_for_loop(self)




    def yul_for_loop(self):

        localctx = YulParser.Yul_for_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_yul_for_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(YulParser.KW_FOR)
            self.state = 111
            self.yul_block()
            self.state = 112
            self.yul_expression()
            self.state = 113
            self.yul_block()
            self.state = 114
            self.yul_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yul_breakContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_BREAK(self):
            return self.getToken(YulParser.KW_BREAK, 0)

        def getRuleIndex(self):
            return YulParser.RULE_yul_break

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYul_break" ):
                listener.enterYul_break(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYul_break" ):
                listener.exitYul_break(self)




    def yul_break(self):

        localctx = YulParser.Yul_breakContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_yul_break)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(YulParser.KW_BREAK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yul_continueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_CONTINUE(self):
            return self.getToken(YulParser.KW_CONTINUE, 0)

        def getRuleIndex(self):
            return YulParser.RULE_yul_continue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYul_continue" ):
                listener.enterYul_continue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYul_continue" ):
                listener.exitYul_continue(self)




    def yul_continue(self):

        localctx = YulParser.Yul_continueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_yul_continue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(YulParser.KW_CONTINUE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yul_leaveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_LEAVE(self):
            return self.getToken(YulParser.KW_LEAVE, 0)

        def getRuleIndex(self):
            return YulParser.RULE_yul_leave

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYul_leave" ):
                listener.enterYul_leave(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYul_leave" ):
                listener.exitYul_leave(self)




    def yul_leave(self):

        localctx = YulParser.Yul_leaveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_yul_leave)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(YulParser.KW_LEAVE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yul_function_definitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_FUNCTION(self):
            return self.getToken(YulParser.KW_FUNCTION, 0)

        def yul_identifier(self):
            return self.getTypedRuleContext(YulParser.Yul_identifierContext,0)


        def yul_block(self):
            return self.getTypedRuleContext(YulParser.Yul_blockContext,0)


        def yul_function_arg_list(self):
            return self.getTypedRuleContext(YulParser.Yul_function_arg_listContext,0)


        def yul_function_ret_list(self):
            return self.getTypedRuleContext(YulParser.Yul_function_ret_listContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_yul_function_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYul_function_definition" ):
                listener.enterYul_function_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYul_function_definition" ):
                listener.exitYul_function_definition(self)




    def yul_function_definition(self):

        localctx = YulParser.Yul_function_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_yul_function_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(YulParser.KW_FUNCTION)
            self.state = 123
            self.yul_identifier()
            self.state = 124
            self.match(YulParser.T__2)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YulParser.ID_LITERAL:
                self.state = 125
                self.yul_function_arg_list()


            self.state = 128
            self.match(YulParser.T__3)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YulParser.T__4:
                self.state = 129
                self.match(YulParser.T__4)
                self.state = 130
                self.yul_function_ret_list()


            self.state = 133
            self.yul_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yul_variable_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_LET(self):
            return self.getToken(YulParser.KW_LET, 0)

        def yul_typed_identifier_list(self):
            return self.getTypedRuleContext(YulParser.Yul_typed_identifier_listContext,0)


        def yul_expression(self):
            return self.getTypedRuleContext(YulParser.Yul_expressionContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_yul_variable_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYul_variable_declaration" ):
                listener.enterYul_variable_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYul_variable_declaration" ):
                listener.exitYul_variable_declaration(self)




    def yul_variable_declaration(self):

        localctx = YulParser.Yul_variable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_yul_variable_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(YulParser.KW_LET)
            self.state = 136
            self.yul_typed_identifier_list()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YulParser.T__5:
                self.state = 137
                self.match(YulParser.T__5)
                self.state = 138
                self.yul_expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yul_function_arg_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def yul_typed_identifier_list(self):
            return self.getTypedRuleContext(YulParser.Yul_typed_identifier_listContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_yul_function_arg_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYul_function_arg_list" ):
                listener.enterYul_function_arg_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYul_function_arg_list" ):
                listener.exitYul_function_arg_list(self)




    def yul_function_arg_list(self):

        localctx = YulParser.Yul_function_arg_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_yul_function_arg_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.yul_typed_identifier_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yul_function_ret_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def yul_typed_identifier_list(self):
            return self.getTypedRuleContext(YulParser.Yul_typed_identifier_listContext,0)


        def getRuleIndex(self):
            return YulParser.RULE_yul_function_ret_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYul_function_ret_list" ):
                listener.enterYul_function_ret_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYul_function_ret_list" ):
                listener.exitYul_function_ret_list(self)




    def yul_function_ret_list(self):

        localctx = YulParser.Yul_function_ret_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_yul_function_ret_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.yul_typed_identifier_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yul_typed_identifier_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def yul_identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YulParser.Yul_identifierContext)
            else:
                return self.getTypedRuleContext(YulParser.Yul_identifierContext,i)


        def yul_type_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YulParser.Yul_type_nameContext)
            else:
                return self.getTypedRuleContext(YulParser.Yul_type_nameContext,i)


        def getRuleIndex(self):
            return YulParser.RULE_yul_typed_identifier_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYul_typed_identifier_list" ):
                listener.enterYul_typed_identifier_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYul_typed_identifier_list" ):
                listener.exitYul_typed_identifier_list(self)




    def yul_typed_identifier_list(self):

        localctx = YulParser.Yul_typed_identifier_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_yul_typed_identifier_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.yul_identifier()
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YulParser.T__6:
                self.state = 146
                self.match(YulParser.T__6)
                self.state = 147
                self.yul_type_name()


            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==YulParser.T__7:
                self.state = 150
                self.match(YulParser.T__7)
                self.state = 151
                self.yul_identifier()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YulParser.T__6:
                    self.state = 152
                    self.match(YulParser.T__6)
                    self.state = 153
                    self.yul_type_name()


                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Yul_identifier_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
